--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
 }
 
 .notepad-container {
-    width: 605px;
+    width: 615px;
     height: 100%;
     align-items: center;
     justify-content: center;
@@ -34,7 +34,7 @@ body {
 .notepad {
     background: rgb(254, 139, 201);
     padding: 4px;
-    width: 600px;
+    width: 610px;
     max-height: 500px;
     height: 100%;
     margin: 0 auto;
@@ -105,7 +105,7 @@ body {
     background-color: rgb(255, 255, 255);
     flex-grow: 1;
     border: none;
-    padding: 8px;
+    padding: 8px 0 8px 8px;
     box-sizing: border-box;
     line-height: 1.5;
     resize: none;
