--- a/style.css
+++ b/style.css
@@ -14,13 +14,15 @@
 body {
     background: rgb(235 210 228);
     font-family: 'bpdots', 'Consolas', 'Courier New', Courier, monospace;
-    font-size: 0.9em;
+    font-size: 1em;
     color: #0d0da5;
     cursor: url('cursor.png'), auto;
 }
 
 .notepad-container {
-    width: 615px;
+    max-width: 805px;
+    min-width: 450px;
+    width: 50%;
     height: 100%;
     align-items: center;
     justify-content: center;
@@ -34,7 +36,8 @@ body {
 .notepad {
     background: rgb(254, 139, 201);
     padding: 4px;
-    width: 610px;
+    max-width: 810px;
+    width: 100%;
     max-height: 500px;
     height: 100%;
     margin: 0 auto;
@@ -72,7 +75,7 @@ body {
     margin-left: 2px;
     cursor: url('cursor.png'), auto;
     font-weight: bold;
-    font-size: 0.8em;
+    font-size: 0.9em;
     width: 25px;
     height: 25px;
     border-top: 1px solid #dcdfff;
@@ -88,7 +91,7 @@ body {
     border-left: 2px solid rgb(254, 139, 201);
     border-right: 2px solid rgb(254, 139, 201);
     padding: 4px 2px;
-    font-size: 0.9em
+    font-size: 1em
 }
 
 .menu-bar ul {
@@ -115,7 +118,7 @@ body {
     border-left: 2px solid #7981e0;
     border-bottom: 2px solid #ffffff;
     border-right: 2px solid #ffffff;
-    width: 587px;
+    /* width: 587px; */
     word-break: break-all;
     white-space: pre-wrap;
     font-family: 'bpdots', 'Consolas', 'Courier New', Courier, monospace;
@@ -146,3 +149,28 @@ body {
 .text-area::-webkit-scrollbar-thumb:hover {
     background: #7981e0;
 }
+
+
+
+/* Add a media query for smaller screens */
+@media only screen and (max-width: 400px) {
+    .notepad-container {
+      width: 90%;
+      border: none;
+      margin: 20px auto;
+    }
+  
+    .notepad {
+      width: 100%;
+      border: none;
+      margin: 0;
+    }
+  
+    .text-area {
+      width: 100%;
+      border: none;
+      border-left: 2px solid #7981e0;
+      border-bottom: 2px solid #ffffff;
+      border-right: 2px solid #ffffff;
+    }
+  }
